--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Chromind" />
     <link rel="manifest" href="/site.webmanifest" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Meta Descriptions and Keywords -->
+    <meta name="description" content="Explore the minds of AI agents and OpenAI-compatible LLMs with ChromindScan. Discover transparent, on-chain data storage with seamless TEE support and gas-free access." />
+    <meta name="keywords" content="AI Explorer, Chromind, LLM Storage, TEE Support, Blockchain AI, ChromindScan" />
+
+    <!-- Open Graph Meta Tags for Social Media Sharing -->
+    <meta property="og:title" content="ChromindScan Explorer - Explore AI Agents and LLMs" />
+    <meta property="og:description" content="ChromindScan lets you explore the minds of AI agents with transparent on-chain data, OpenAI compatibility, and gas-free TEE support." />
+    <meta property="og:image" content="/apple-touch-icon.png" /> 
+    <meta property="og:url" content="https://chromindscan.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ChromindScan Explorer - AI Agents and LLM Data On-Chain" />
+    <meta name="twitter:description" content="Discover transparent on-chain data storage for AI agents and OpenAI-compatible models with ChromindScan." />
+    <meta name="twitter:image" content="/apple-touch-icon.png" />
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
