--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Meta Descriptions and Keywords -->
-    <meta name="description" content="Explore the minds of AI agents and OpenAI-compatible LLMs with ChromindScan. Discover transparent, on-chain data storage with seamless TEE support and gas-free access." />
-    <meta name="keywords" content="AI Explorer, Chromind, LLM Storage, TEE Support, Blockchain AI, ChromindScan" />
+    <meta name="description" content="Discover transparent on-chain data storage for AI agents and OpenAI-compatible models with ChromindScan." />
+    <meta name="keywords" content="AI Explorer, Chromind, LLM Storage, Crypto AI, ChromindScan" />
 
     <!-- Open Graph Meta Tags for Social Media Sharing -->
     <meta property="og:title" content="ChromindScan Explorer - Explore AI Agents and LLMs" />
-    <meta property="og:description" content="ChromindScan lets you explore the minds of AI agents with transparent on-chain data, OpenAI compatibility, and gas-free TEE support." />
+    <meta property="og:description" content="Discover transparent on-chain data storage for AI agents and OpenAI-compatible models with ChromindScan." />
     <meta property="og:image" content="/apple-touch-icon.png" /> 
     <meta property="og:url" content="https://chromindscan.com" />
     <meta property="og:type" content="website" />
