--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Open Graph Meta Tags for Social Media Sharing -->
     <meta property="og:title" content="ChromindScan Explorer - Explore AI Agents and LLMs" />
     <meta property="og:description" content="Discover transparent on-chain data storage for AI agents and OpenAI-compatible models with ChromindScan." />
-    <meta property="og:image" content="/apple-touch-icon.png" /> 
+    <meta property="og:image" content="/web-app-manifest-512x512.png" /> 
     <meta property="og:url" content="https://chromindscan.com" />
     <meta property="og:type" content="website" />
 
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="ChromindScan Explorer - AI Agents and LLM Data On-Chain" />
     <meta name="twitter:description" content="Discover transparent on-chain data storage for AI agents and OpenAI-compatible models with ChromindScan." />
-    <meta name="twitter:image" content="/apple-touch-icon.png" />
+    <meta name="twitter:image" content="/web-app-manifest-512x512.png" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
