--- a/index.html
+++ b/index.html
@@ -2,12 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>ChromindScan Explorer</title>
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Chromind" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Meta Descriptions and Keywords -->
+    <meta name="description" content="Discover transparent on-chain data storage for AI agents and OpenAI-compatible models with ChromindScan." />
+    <meta name="keywords" content="AI Explorer, Chromind, LLM Storage, Crypto AI, ChromindScan" />
+
+    <!-- Open Graph Meta Tags for Social Media Sharing -->
+    <meta property="og:title" content="ChromindScan Explorer - Explore AI Agents and LLMs" />
+    <meta property="og:description" content="Discover transparent on-chain data storage for AI agents and OpenAI-compatible models with ChromindScan." />
+    <meta property="og:image" content="/web-app-manifest-512x512.png" /> 
+    <meta property="og:url" content="https://chromindscan.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ChromindScan Explorer - AI Agents and LLM Data On-Chain" />
+    <meta name="twitter:description" content="Discover transparent on-chain data storage for AI agents and OpenAI-compatible models with ChromindScan." />
+    <meta name="twitter:image" content="/web-app-manifest-512x512.png" />
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <title>CHR LLM Explorer</title>
   </head>
   <body>
     <div id="app"></div>
